Updated mobile/email recipients to be readonly for INPUT sensors

--- a/webapp/src/ionicapp/www/templates/anemometer.html
+++ b/webapp/src/ionicapp/www/templates/anemometer.html
@@ -94,11 +94,11 @@
       </div>
       <ion-checkbox id="anemometer-checkbox26" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="anemometer-input117">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
       <ion-checkbox id="anemometer-checkbox27" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="anemometer-input118">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
       <ion-checkbox id="anemometer-checkbox28" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="anemometer-input119">
