--- a/webapp/src/ionicapp/www/templates/fluid.html
+++ b/webapp/src/ionicapp/www/templates/fluid.html
@@ -94,11 +94,11 @@
       </div>
       <ion-checkbox id="fluid-checkbox44" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="fluid-input153">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
       <ion-checkbox id="fluid-checkbox45" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="fluid-input154">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
       <ion-checkbox id="fluid-checkbox46" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="fluid-input155">
