--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -94,11 +94,11 @@
       </div>
       <ion-checkbox id="humidity-checkbox7" ng-model="data.attributes.notification.endpoints.email.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="humidity-input139">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
       <ion-checkbox id="humidity-checkbox8" ng-model="data.attributes.notification.endpoints.mobile.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="humidity-input140">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
       <ion-checkbox id="humidity-checkbox9" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="humidity-input141">
