--- a/webapp/src/ionicapp/www/templates/potentiometer.html
+++ b/webapp/src/ionicapp/www/templates/potentiometer.html
@@ -103,11 +103,11 @@
       </div>
       <ion-checkbox id="potentiometer-checkbox14" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="potentiometer-input113">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
       <ion-checkbox id="potentiometer-checkbox15" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="potentiometer-input115">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
       <ion-checkbox id="potentiometer-checkbox16" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="potentiometer-input116">
