--- a/webapp/src/ionicapp/www/templates/battery.html
+++ b/webapp/src/ionicapp/www/templates/battery.html
@@ -94,11 +94,11 @@
       </div>
       <ion-checkbox id="battery-checkbox38" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="battery-input146">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
       <ion-checkbox id="battery-checkbox39" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="battery-input147">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
       <ion-checkbox id="battery-checkbox40" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="battery-input148">
