--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -92,11 +92,11 @@
       <div id="humidity-markdown322" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Recipients</p>
       </div>
-      <ion-checkbox id="humidity-checkbox7" ng-model="data.attributes.notification.endpoints.email.enable">Send SMS to</ion-checkbox>
+      <ion-checkbox id="humidity-checkbox7" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="humidity-input139">
         <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
-      <ion-checkbox id="humidity-checkbox8" ng-model="data.attributes.notification.endpoints.mobile.enable">Send email to</ion-checkbox>
+      <ion-checkbox id="humidity-checkbox8" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="humidity-input140">
         <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
