--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -92,11 +92,11 @@
       <div id="temperature-markdown110" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Recipients</p>
       </div>
-      <ion-checkbox id="temperature-checkbox21" ng-model="data.attributes.notification.endpoints.email.enable">Send SMS to</ion-checkbox>
+      <ion-checkbox id="temperature-checkbox21" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="temperature-input129">
         <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
       </label>
-      <ion-checkbox id="temperature-checkbox22" ng-model="data.attributes.notification.endpoints.mobile.enable">Send email to</ion-checkbox>
+      <ion-checkbox id="temperature-checkbox22" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="temperature-input130">
         <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
       </label>
