Set web app width to 1000 instead of 500

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -15,6 +15,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	margin: 0% auto;
 }
 
+.page_width_small {
+	max-width: 500px;
+	margin: 0% auto;
+}
+
 .widget_button {
 	width: 48% !important;
 	height: 65px;
