--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9809,6 +9809,10 @@ a.button {
   max-width: 1000px;
   margin: 0% auto; }
 
+.page_width_small {
+  max-width: 500px;
+  margin: 0% auto; }
+
 .widget_button {
   width: 48% !important;
   height: 65px; }
