--- a/webapp/src/ionicapp/www/templates/changePassword.html
+++ b/webapp/src/ionicapp/www/templates/changePassword.html
@@ -1,4 +1,4 @@
-<ion-view title="Change Password" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page24" class="page_width">
+<ion-view title="Change Password" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page24" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="changePassword-heading11" style="color:#444444;text-align:center;">Change your password</h3>
