--- a/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
+++ b/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
@@ -1,4 +1,4 @@
-<ion-view title="Confirm Phone Number" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page23" class="page_width">
+<ion-view title="Confirm Phone Number" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page23" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="confirmPhoneNumber-heading10" style="color:#444444;text-align:center;">Confirm Phone Number</h3>
