--- a/webapp/src/ionicapp/www/templates/confirmRegistration.html
+++ b/webapp/src/ionicapp/www/templates/confirmRegistration.html
@@ -1,4 +1,4 @@
-<ion-view title="Confirm Registration" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page9" class="page_width">
+<ion-view title="Confirm Registration" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page9" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="confirmRegistration-heading9" style="color:#444444;text-align:center;">Confirm Registration</h3>
