--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Login" hide-nav-bar="true" hide-back-button="true" nav-transition="none" id="page5" class="page_width">
+<ion-view title="Login" hide-nav-bar="true" hide-back-button="true" nav-transition="none" id="page5" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="login-heading5" style="color:#444444;">Sign In</h3>
