--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -1,4 +1,4 @@
-<ion-view title="Recover" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page7" class="page_width">
+<ion-view title="Recover" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page7" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="recover-heading7" style="color:#444444;text-align:center;">Forgot password</h3>
