--- a/webapp/src/ionicapp/www/templates/resetPassword.html
+++ b/webapp/src/ionicapp/www/templates/resetPassword.html
@@ -1,4 +1,4 @@
-<ion-view title="Reset Password" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page8" class="page_width">
+<ion-view title="Reset Password" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page8" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
     <h3 id="resetPassword-heading8" style="color:#444444;text-align:center;">Reset your password</h3>
