--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9821,6 +9821,19 @@ a.button {
   width: 96% !important;
   height: 65px; }
 
+.widget_button_half {
+  width: 49% !important;
+  display: inline-block; }
+
+.widget_button_half_50 {
+  width: 48% !important;
+  height: 75px;
+  display: inline-block; }
+
+.widget_button_third {
+  width: 33% !important;
+  display: inline-block; }
+
 .line_spacing {
   line-height: 10px; }
 
