--- a/webapp/src/ionicapp/www/templates/history.html
+++ b/webapp/src/ionicapp/www/templates/history.html
@@ -2,25 +2,26 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 15px;"></div>
     <form id="history-form34" class="list">
-      <label class="item item-select" id="history-select6">
-        <span class="input-label">Filter by Device</span>
+      <ion-item class="item-divider" id="history-list-item-divider8"> Filter options</ion-item>
+      <label class="item item-select widget_button_third" id="history-select6">
+        <span class="input-label">Device</span>
         <select ng-options="devices.indexOf(deviceidx) as deviceidx for deviceidx in devices" ng-model="deviceidx"></select>
       </label>
-      <label class="item item-select" id="history-select7">
-        <span class="input-label">Filter by Direction</span>
+      <label class="item item-select widget_button_third" id="history-select7">
+        <span class="input-label">Direction</span>
         <select ng-options="directions.indexOf(directionidx) as directionidx for directionidx in directions" ng-model="directionidx"></select>
       </label>
-      <label class="item item-select" id="history-select8">
-        <span class="input-label">Filter by Topic</span>
+      <label class="item item-select widget_button_third" id="history-select8">
+        <span class="input-label">Topic</span>
         <select ng-options="topics.indexOf(topicidx) as topicidx for topicidx in topics" ng-model="topicidx"></select>
       </label>
-      <ion-item class="item-divider" id="history-list-item-divider7"> Filter by Date</ion-item>
-      <label class="item item-input item-stacked-label" id="history-input64">
-        <span class="input-label">Begin</span>
+      <div class="spacer" style="width: 300px; height: 5px;"></div>
+      <label class="item item-input item-stacked-label widget_button_half" id="history-input64">
+        <span class="input-label">Begin Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.begin">
       </label>
-      <label class="item item-input item-stacked-label" id="history-input65">
-        <span class="input-label">End</span>
+      <label class="item item-input item-stacked-label widget_button_half" id="history-input65">
+        <span class="input-label">End Date</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.end">
       </label>
       <button id="history-button33" ng-click="applyFilter(deviceidx, directionidx, topicidx)" class="button button-positive button-block">Apply</button>
