--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -21,7 +21,9 @@
           <i class="icon ion-person"></i>Account</ion-item>
         <ion-item class="item-icon-left positive" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item18" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive" id="menu-list-item18" ui-sref="menu.notification({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+          <i class="icon ion-android-checkbox-outline"></i>Notifications</ion-item>
+        <ion-item class="item-icon-left positive" id="menu-list-item6" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-android-clipboard"></i>History</ion-item>
         <ion-item class="item-icon-left positive" id="menu-list-item4" ui-sref="menu.helpSupport({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-help-circled"></i>Help &amp; Support</ion-item>
