Added filtering via peripheral

--- a/webapp/src/ionicapp/www/templates/history.html
+++ b/webapp/src/ionicapp/www/templates/history.html
@@ -5,7 +5,9 @@
       <ion-toggle toggle-class="toggle-positive" id="history-toggle19" ng-model="hide_settings">.</ion-toggle>
     </form>
     <form id="history-form193" class="list" ng-show="!hide_settings">
-      <ion-item class="item-divider" id="history-list-item-divider9"> Filter options</ion-item>
+      <div id="history-markdown291" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Filter options</p>
+      </div>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
       <label class="item item-select widget_button_third" id="history-select99">
         <span class="input-label">Device</span>
