--- a/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
+++ b/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
@@ -18,11 +18,11 @@
       <div id="viewDeviceLocation-markdown345" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Device location</p>
       </div>
-      <label class="item item-input" id="viewDeviceLocation-input165">
+      <label class="item item-input widget_button_half" id="viewDeviceLocation-input165">
         <span class="input-label">Latitude</span>
         <input type="text" placeholder="" ng-model="data.location.latitude">
       </label>
-      <label class="item item-input" id="viewDeviceLocation-input166">
+      <label class="item item-input widget_button_half" id="viewDeviceLocation-input166">
         <span class="input-label">Longitude</span>
         <input type="text" placeholder="" ng-model="data.location.longitude">
       </label>
