Updated page for upgrading device firmware

--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -12,11 +12,11 @@
     </form>
     <button id="order-button13" ng-click="submitBuycredits()" class="button button-positive button-block">Pay via Paypal</button>
     <div id="order-markdown29" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Paypal Test buyer account</p>
+      <p style="color:#AAAAAA;font-size:12px;">Paypal Test buyer account</p>
 
-      <p style="color:#000000;">user: iotportal@bridgetek.com</p>
+      <p style="color:#AAAAAA;font-size:12px;">user: iotportal@bridgetek.com</p>
 
-      <p style="color:#000000;">pass: BrtIoTPortal</p>
+      <p style="color:#AAAAAA;font-size:12px;">pass: BrtIoTPortal</p>
     </div>
   </ion-content>
 </ion-view>
