--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -10,6 +10,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	background-color: #387EF5;
 }
 
+.tab_margin_1 {
+	margin-left: 1em;
+}
+
 .page_width {
 	max-width: 1000px;
 	margin: 0% auto;
@@ -28,6 +32,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .widget_button_ex {
 	width: 96% !important;
 	height: 65px;
+}
+
+.widget_button_20 {
+	width: 19% !important;
+	display: inline-block;
+}
+
+.widget_button_80 {
+	width: 79% !important;
+	display: inline-block;
 }
 
 .widget_button_half {
