--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9805,6 +9805,9 @@ a.button {
 .card_top {
   background-color: #387EF5; }
 
+.tab_margin_1 {
+  margin-left: 1em; }
+
 .page_width {
   max-width: 1000px;
   margin: 0% auto; }
@@ -9820,6 +9823,14 @@ a.button {
 .widget_button_ex {
   width: 96% !important;
   height: 65px; }
+
+.widget_button_20 {
+  width: 19% !important;
+  display: inline-block; }
+
+.widget_button_80 {
+  width: 79% !important;
+  display: inline-block; }
 
 .widget_button_half {
   width: 49% !important;
