--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -13,21 +13,15 @@
       </p>
     </div>
     <div class="spacer" style="height: 12px;"></div>
-    <form id="viewDevice-form24" class="list">
-      <div id="viewDevice-markdown237" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device name</p>
-      </div>
-      <label class="item item-input" id="viewDevice-input35" name="input-devicename">
-        <span class="input-label">Name</span>
-        <input type="text" placeholder="" ng-model="new_devicename">
-      </label>
-      <button id="viewDevice-button149" ng-click="changeDevicename(data.devicename, new_devicename)" class="button button-positive button-block">Update Device Name</button>
-      <div id="viewDevice-markdown51" class="show-list-numbers-and-dots"></div>
-    </form>
     <div id="viewDevice-markdown251" class="show-list-numbers-and-dots">
       <p style="color:#387EF5;">Device information</p>
     </div>
     <form id="viewDevice-form167" class="list">
+      <label class="item item-input" id="viewDevice-input35" name="input-devicename">
+        <span class="input-label">Name</span>
+        <input type="text" placeholder="" ng-model="new_devicename">
+      </label>
+      <button id="viewDevice-button156" ng-click="changeDevicename(data.devicename, new_devicename)" class="button button-positive button-block">Update Device Name</button>
       <label class="item item-input" id="viewDevice-input157" name="input-deviceid">
         <span class="input-label">UUID</span>
         <input type="text" placeholder="" ng-model="data.deviceid" readonly="">
@@ -53,7 +47,7 @@
         <p style="color:#AAAAAA;font-size:12px;">{{ newfirmwareavailable ? "New firmware is available" : "" }}</p>
       </div>
       <button id="viewDevice-button21" ng-click="upgradeDeviceFirmware()" ng-show="newfirmwareversion >= data.version" class="button button-positive button-block button-outline">Upgrade Device Firmware</button>
-      <button id="viewDevice-button154" ng-click="viewDeviceLocation()" class="button button-positive button-block">Get/set Device Location</button>
+      <button id="viewDevice-button154" ng-click="viewDeviceLocation()" class="button button-positive button-block">Set Device Location</button>
     </form>
     <div id="viewDevice-markdown252" class="show-list-numbers-and-dots">
       <p style="color:#387EF5;">Device operations</p>
