--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -14,17 +14,27 @@
           <input type="password" placeholder="" ng-model="data.password">
         </label>
       </ion-list>
-      <button id="login-button5" ng-click="submit()" class="button button-positive button-block">LOGIN</button>
+      <button id="login-button5" ng-click="submit()" class="button button-positive button-block">Login</button>
+      <a ui-sref="signup()" id="login-button6" class="button button-positive button-block button-outline">Don't have an account? Sign Up</a>
       <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
-      <div class="spacer" style="width: 300px; height: 20px;"></div>
-      <div id="login-markdown28" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#BBBBBB;font-size:12px;">By logging into an account, you are agreeing with our
+    </form>
+    <form id="login-form225" class="list">
+      <div id="login-markdown360" class="show-list-numbers-and-dots">
+        <p style="color:#AAAAAA;font-size:11px;">---------------------------------------------------- OR ----------------------------------------------------</p>
+      </div>
+    </form>
+    <form id="login-form227" class="list">
+      <button id="login-button163" ng-click="getOAuthCode()" class="button button-royal button-block">Login with Facebook</button>
+      <div class="spacer" style="width: 480px; height: 50px;"></div>
+    </form>
+    <form id="login-form226" class="list">
+      <div id="login-markdown359" style="text-align:center;" class="show-list-numbers-and-dots">
+        <p style="color:#AAAAAA;font-size:11px;">By logging into an account, you are agreeing with our
           <strong>Terms and Conditions</strong> and
           <strong>Privacy Policy</strong>
         </p>
       </div>
     </form>
     <div id="login-container2" class="spinner creator-container"></div>
-    <a ui-sref="signup()" id="login-button6" class="button button-dark button-block button-clear">Don't have an account? Sign Up</a>
   </ion-content>
 </ion-view>
